welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: not found: type int
var NbPas: int=1
           ^Variables:5: error: not found: value Nbpas
Nbpas=NbPas+1
^Variables:8: error: not found: type int
var Deajfait: int=0
              ^Variables:9: error: not found: value Dejafait
while(Dejafait!=NbPas)
      ^Variables:11: error: not found: value Dejafait
Dejafait=Dejafait+1
^